documentacion/obtenida/ARINC 429/driver and software/PC1553-3/API/P13W32.H

typedef void VOID;
typedef void * LPVOID;
typedef int INT;
typedef int * LPINT;
typedef unsigned short USHORT;
typedef unsigned short * LPUSHORT;
typedef unsigned long ULONG;
typedef unsigned long * LPULONG;
typedef unsigned long MSGADDR;
typedef int BOOL;
typedef int HCARD;
typedef int ERRVAL;

P13W32API ERRVAL __stdcall P13_IntConfig(USHORT configval,USHORT count,HCARD handleval);

P13W32API ERRVAL __stdcall P13_IntDisable(HCARD handleval);

P13W32API ERRVAL __stdcall P13_IntEnable(HCARD handleval);

P13W32API ERRVAL __stdcall P13_IntEnableCond(HCARD handleval);

P13W32API LPVOID __stdcall P13_IntGet(HCARD handleval);

P13W32API ERRVAL __stdcall P13_IntInstall(LPVOID hEvent,HCARD handleval);

P13W32API ULONG __stdcall P13_IntRd(LPUSHORT typeval,LPUSHORT infoval,HCARD handleval);

P13W32API VOID __stdcall P13_IntReset(HCARD handleval);

P13W32API INT __stdcall P13_IntStatus(HCARD handleval);

P13W32API ERRVAL __stdcall P13_IntUninstall(HCARD handleval);

P13W32API USHORT __stdcall P13_IORdW(USHORT addrval,HCARD handleval);

P13W32API USHORT __stdcall P13_IOWINRdW(USHORT addrval,HCARD handleval);

P13W32API VOID __stdcall P13_IOWINWrW(USHORT value,USHORT addrval,HCARD handleval);

P13W32API VOID __stdcall P13_IOWrW(USHORT value,USHORT addrval,HCARD handleval);

P13W32API ERRVAL __stdcall P13_KernDev(LPULONG valueptr,HCARD handleval);

P13W32API ERRVAL __stdcall P13_KernEnd(HCARD handleval);

P13W32API ERRVAL __stdcall P13_KernIntClear(HCARD handleval);

P13W32API ERRVAL __stdcall P13_KernIntInstall(LPVOID hEvent,HCARD handleval);

P13W32API ERRVAL __stdcall P13_KernIntStatus(LPINT valueptr,HCARD handleval);

P13W32API ERRVAL __stdcall P13_KernIntUninstall(HCARD handleval);

P13W32API ERRVAL __stdcall P13_KernIORdW(LPUSHORT valueptr,USHORT addrval,HCARD handleval);

P13W32API ERRVAL __stdcall P13_KernIOWrW(USHORT value,USHORT addrval,HCARD handleval);

P13W32API ERRVAL __stdcall P13_KernMEMFillW(USHORT value,USHORT addrval,USHORT countval,HCARD handleval);

P13W32API ERRVAL __stdcall P13_KernMEMRdsW(LPUSHORT bufptr,USHORT addrval,USHORT countval,HCARD handleval);

P13W32API ERRVAL __stdcall P13_KernMEMRdW(LPUSHORT valueptr,USHORT addrval,HCARD handleval);

P13W32API ERRVAL __stdcall P13_KernMEMWrsW(LPUSHORT bufptr,USHORT addrval,USHORT countval,HCARD handleval);

P13W32API ERRVAL __stdcall P13_KernMEMWrW(USHORT value,USHORT addrval,HCARD handleval);

P13W32API ERRVAL __stdcall P13_KernStatus(LPULONG valueptr,ULONG type,HCARD handleval);

P13W32API ULONG __stdcall P13_ListConfig(ULONG configval,USHORT count,HCARD handleval);

P13W32API ULONG __stdcall P13_MakeLong(USHORT valh,USHORT vall);

P13W32API ULONG __stdcall P13_Mask(ULONG dataval,USHORT cntval);

P13W32API USHORT __stdcall P13_MEMWINRdB(ULONG addrval,HCARD handleval);

P13W32API ULONG __stdcall P13_MEMWINRdL(ULONG addrval,HCARD handleval);

P13W32API USHORT __stdcall P13_MEMWINRdW(ULONG addrval,HCARD handleval);

P13W32API VOID __stdcall P13_MEMWINWrB(USHORT value,ULONG addrval,HCARD handleval);

P13W32API VOID __stdcall P13_MEMWINWrL(ULONG value,ULONG addrval,HCARD handleval);

P13W32API VOID __stdcall P13_MEMWINWrW(USHORT value,ULONG addrval,HCARD handleval);

P13W32API ULONG __stdcall P13_Mod(ULONG moda,ULONG modb);

P13W32API BOOL __stdcall P13_ModeIsBC(HCARD handleval);

P13W32API BOOL __stdcall P13_ModeIsMon(HCARD handleval);

P13W32API BOOL __stdcall P13_ModeIsNotBC(HCARD handleval);

P13W32API BOOL __stdcall P13_ModeIsNotMon(HCARD handleval);

P13W32API BOOL __stdcall P13_ModeIsNotRT(HCARD handleval);

P13W32API BOOL __stdcall P13_ModeIsNotSerial(HCARD handleval);

P13W32API BOOL __stdcall P13_ModeIsRT(HCARD handleval);

P13W32API BOOL __stdcall P13_ModeIsSerial(HCARD handleval);

P13W32API USHORT __stdcall P13_ModeRd(HCARD handleval);

P13W32API VOID __stdcall P13_ModeWr(USHORT mode,HCARD handleval);

P13W32API ERRVAL __stdcall P13_MonClear(HCARD handleval);

P13W32API ERRVAL __stdcall P13_MonConfigEx(ULONG configval,ULONG moncount,USHORT cardnum,HCARD handleval);

P13W32API ERRVAL __stdcall P13_MonConfigExx(ULONG configval,ULONG seqaddr,ULONG moncount,USHORT cardnum,HCARD handleval);

P13W32API ERRVAL __stdcall P13_MonFilterSAEx(INT taval,ULONG rcvsamask,ULONG xmtsamask,ULONG rcvmcmask,ULONG xmtmcmask,HCARD handleval);

P13W32API USHORT __stdcall P13_MonRdEx(LPUSHORT buf,USHORT bufcount,HCARD handleval);

P13W32API BOOL __stdcall P13_MonResume(HCARD handleval);

P13W32API BOOL __stdcall P13_MonStart(HCARD handleval);

P13W32API BOOL __stdcall P13_MonStatus(HCARD handleval);

P13W32API BOOL __stdcall P13_MonStop(HCARD handleval);

P13W32API MSGADDR __stdcall P13_MsgBlockRd(LPUSHORT buf,MSGADDR msgaddr,HCARD handleval);

P13W32API MSGADDR __stdcall P13_MsgBlockWr(LPUSHORT buf,MSGADDR msgaddr,HCARD handleval);

P13W32API USHORT __stdcall P13_MsgCheck(MSGADDR msgaddr,HCARD handleval);

P13W32API MSGADDR __stdcall P13_MsgCommRd(LPUSHORT buf,MSGADDR msgaddr,HCARD handleval);

P13W32API MSGADDR __stdcall P13_MsgCommWr(LPUSHORT buf,MSGADDR msgaddr,HCARD handleval);

P13W32API MSGADDR __stdcall P13_MsgConfig(ULONG configval,HCARD handleval);

P13W32API MSGADDR __stdcall P13_MsgConfigEx(ULONG configval,USHORT cwd,HCARD handleval);

P13W32API USHORT __stdcall P13_MsgCWD1Rd(MSGADDR msgaddr,HCARD handleval);

P13W32API VOID __stdcall P13_MsgCWD1Wr(USHORT cwd1,MSGADDR msgaddr,HCARD handleval);

P13W32API USHORT __stdcall P13_MsgCWD2Rd(MSGADDR msgaddr,HCARD handleval);

P13W32API VOID __stdcall P13_MsgCWD2Wr(USHORT cwd2,MSGADDR msgaddr,HCARD handleval);

P13W32API USHORT __stdcall P13_MsgErrorRd(MSGADDR msgaddr,HCARD handleval);

P13W32API VOID __stdcall P13_MsgErrorWr(USHORT value,MSGADDR msgaddr,HCARD handleval);

P13W32API USHORT __stdcall P13_MsgFlagRd(MSGADDR msgaddr,HCARD handleval);

P13W32API VOID __stdcall P13_MsgFlagWr(USHORT msgflag,MSGADDR msgaddr,HCARD handleval);

P13W32API BOOL __stdcall P13_MsgIsAccessed(MSGADDR msgaddr,HCARD handleval);

P13W32API USHORT __stdcall P13_MsgOptRd(MSGADDR msgaddr,HCARD handleval);

P13W32API VOID __stdcall P13_MsgOptWr(USHORT msgopt,MSGADDR msgaddr,HCARD handleval);

P13W32API MSGADDR __stdcall P13_MsgReset(MSGADDR msgaddr,HCARD handleval);

P13W32API USHORT __stdcall P13_MsgSWD1Rd(MSGADDR msgaddr,HCARD handleval);

P13W32API USHORT __stdcall P13_MsgSWD2Rd(MSGADDR msgaddr,HCARD handleval);

P13W32API ULONG __stdcall P13_Mul(ULONG mula,ULONG mulb);

P13W32API USHORT __stdcall P13_PortRd(USHORT addrval,HCARD handleval);

P13W32API VOID __stdcall P13_PortWr(USHORT value,USHORT addrval,HCARD handleval);

P13W32API USHORT __stdcall P13_ProgRdW(USHORT addrval,HCARD handleval);