documentacion/obtenida/ARINC 429/driver and software/PC1553-3/API/P13W32VB.BAS

Public Declare Function P13_IntConfig Lib "P13W32.DLL" Alias "_P13_IntConfig@12" (ByVal configval As Integer, ByVal count As Integer, ByVal handleval As Long) As Long
Public Declare Function P13_IntDisable Lib "P13W32.DLL" Alias "_P13_IntDisable@4" (ByVal handleval As Long) As Long
Public Declare Function P13_IntEnable Lib "P13W32.DLL" Alias "_P13_IntEnable@4" (ByVal handleval As Long) As Long
Public Declare Function P13_IntEnableCond Lib "P13W32.DLL" Alias "_P13_IntEnableCond@4" (ByVal handleval As Long) As Long
Public Declare Function P13_IntGet Lib "P13W32.DLL" Alias "_P13_IntGet@4" (ByVal handleval As Long) As Long
Public Declare Function P13_IntInstall Lib "P13W32.DLL" Alias "_P13_IntInstall@8" (ByRef hevent As Long, ByVal handleval As Long) As Long
Public Declare Function P13_IntRd Lib "P13W32.DLL" Alias "_P13_IntRd@12" (ByRef typevalval As Integer, ByRef infoval As Integer, ByVal handleval As Long) As Long
Public Declare Function P13_IntReset Lib "P13W32.DLL" Alias "_P13_IntReset@4" (ByVal handleval As Long) As Long
Public Declare Function P13_IntStatus Lib "P13W32.DLL" Alias "_P13_IntStatus@4" (ByVal handleval As Long) As Long
Public Declare Function P13_IntUninstall Lib "P13W32.DLL" Alias "_P13_IntUninstall@4" (ByVal handleval As Long) As Long
Public Declare Function P13_IORdW Lib "P13W32.DLL" Alias "_P13_IORdW@8" (ByVal addrval As Integer, ByVal handleval As Long) As Integer
Public Declare Function P13_IOWINRdW Lib "P13W32.DLL" Alias "_P13_IOWINRdW@8" (ByVal addrval As Integer, ByVal handleval As Long) As Integer
Public Declare Function P13_IOWINWrW Lib "P13W32.DLL" Alias "_P13_IOWINWrW@12" (ByVal value As Integer, ByVal addrval As Integer, ByVal handleval As Long) As Long
Public Declare Function P13_IOWrW Lib "P13W32.DLL" Alias "_P13_IOWrW@12" (ByVal value As Integer, ByVal addrval As Integer, ByVal handleval As Long) As Long
Public Declare Function P13_KernDev Lib "P13W32.DLL" Alias "_P13_KernDev@8" (ByRef valueptr As Long, ByVal handleval As Long) As Long
Public Declare Function P13_KernEnd Lib "P13W32.DLL" Alias "_P13_KernEnd@4" (ByVal handleval As Long) As Long
Public Declare Function P13_KernIntClear Lib "P13W32.DLL" Alias "_P13_KernIntClear@4" (ByVal handleval As Long) As Long
Public Declare Function P13_KernIntInstall Lib "P13W32.DLL" Alias "_P13_KernIntInstall@8" (ByRef hevent As Long, ByVal handleval As Long) As Long
Public Declare Function P13_KernIntStatus Lib "P13W32.DLL" Alias "_P13_KernIntStatus@8" (ByRef valueptr As Long, ByVal handleval As Long) As Long
Public Declare Function P13_KernIntUninstall Lib "P13W32.DLL" Alias "_P13_KernIntUninstall@4" (ByVal handleval As Long) As Long
Public Declare Function P13_KernIORdW Lib "P13W32.DLL" Alias "_P13_KernIORdW@12" (ByRef valueptr As Integer, ByVal addrval As Integer, ByVal handleval As Long) As Long
Public Declare Function P13_KernIOWrW Lib "P13W32.DLL" Alias "_P13_KernIOWrW@12" (ByVal value As Integer, ByVal addrval As Integer, ByVal handleval As Long) As Long
Public Declare Function P13_KernMEMFillW Lib "P13W32.DLL" Alias "_P13_KernMEMFillW@16" (ByVal value As Integer, ByVal addrval As Integer, ByVal countval As Integer, ByVal handleval As Long) As Long
Public Declare Function P13_KernMEMRdsW Lib "P13W32.DLL" Alias "_P13_KernMEMRdsW@16" (ByRef bufptr As Integer, ByVal addrval As Integer, ByVal countval As Integer, ByVal handleval As Long) As Long
Public Declare Function P13_KernMEMRdW Lib "P13W32.DLL" Alias "_P13_KernMEMRdW@12" (ByRef valueptr As Integer, ByVal addrval As Integer, ByVal handleval As Long) As Long
Public Declare Function P13_KernMEMWrsW Lib "P13W32.DLL" Alias "_P13_KernMEMWrsW@16" (ByRef bufptr As Integer, ByVal addrval As Integer, ByVal countval As Integer, ByVal handleval As Long) As Long
Public Declare Function P13_KernMEMWrW Lib "P13W32.DLL" Alias "_P13_KernMEMWrW@12" (ByVal value As Integer, ByVal addrval As Integer, ByVal handleval As Long) As Long
Public Declare Function P13_KernStatus Lib "P13W32.DLL" Alias "_P13_KernStatus@12" (ByRef valueptr As Long, ByVal typeval As Long, ByVal handleval As Long) As Long
Public Declare Function P13_ListConfig Lib "P13W32.DLL" Alias "_P13_ListConfig@12" (ByVal configval As Long, ByVal count As Integer, ByVal handleval As Long) As Long
Public Declare Function P13_MakeLong Lib "P13W32.DLL" Alias "_P13_MakeLong@8" (ByVal valh As Integer, ByVal vall As Integer) As Long
Public Declare Function P13_Mask Lib "P13W32.DLL" Alias "_P13_Mask@8" (ByVal dataval As Long, ByVal cntval As Integer) As Long
Public Declare Function P13_MEMWINRdB Lib "P13W32.DLL" Alias "_P13_MEMWINRdB@8" (ByVal addrval As Long, ByVal handleval As Long) As Integer
Public Declare Function P13_MEMWINRdL Lib "P13W32.DLL" Alias "_P13_MEMWINRdL@8" (ByVal addrval As Long, ByVal handleval As Long) As Long
Public Declare Function P13_MEMWINRdW Lib "P13W32.DLL" Alias "_P13_MEMWINRdW@8" (ByVal addrval As Long, ByVal handleval As Long) As Integer
Public Declare Function P13_MEMWINWrB Lib "P13W32.DLL" Alias "_P13_MEMWINWrB@12" (ByVal value As Integer, ByVal addrval As Long, ByVal handleval As Long) As Long
Public Declare Function P13_MEMWINWrL Lib "P13W32.DLL" Alias "_P13_MEMWINWrL@12" (ByVal value As Long, ByVal addrval As Long, ByVal handleval As Long) As Long
Public Declare Function P13_MEMWINWrW Lib "P13W32.DLL" Alias "_P13_MEMWINWrW@12" (ByVal value As Integer, ByVal addrval As Long, ByVal handleval As Long) As Long
Public Declare Function P13_Mod Lib "P13W32.DLL" Alias "_P13_Mod@8" (ByVal moda As Long, ByVal modb As Long) As Long
Public Declare Function P13_ModeIsBC Lib "P13W32.DLL" Alias "_P13_ModeIsBC@4" (ByVal handleval As Long) As Long
Public Declare Function P13_ModeIsMon Lib "P13W32.DLL" Alias "_P13_ModeIsMon@4" (ByVal handleval As Long) As Long
Public Declare Function P13_ModeIsNotBC Lib "P13W32.DLL" Alias "_P13_ModeIsNotBC@4" (ByVal handleval As Long) As Long
Public Declare Function P13_ModeIsNotMon Lib "P13W32.DLL" Alias "_P13_ModeIsNotMon@4" (ByVal handleval As Long) As Long
Public Declare Function P13_ModeIsNotRT Lib "P13W32.DLL" Alias "_P13_ModeIsNotRT@4" (ByVal handleval As Long) As Long
Public Declare Function P13_ModeIsNotSerial Lib "P13W32.DLL" Alias "_P13_ModeIsNotSerial@4" (ByVal handleval As Long) As Long
Public Declare Function P13_ModeIsRT Lib "P13W32.DLL" Alias "_P13_ModeIsRT@4" (ByVal handleval As Long) As Long
Public Declare Function P13_ModeIsSerial Lib "P13W32.DLL" Alias "_P13_ModeIsSerial@4" (ByVal handleval As Long) As Long
Public Declare Function P13_ModeRd Lib "P13W32.DLL" Alias "_P13_ModeRd@4" (ByVal handleval As Long) As Integer
Public Declare Function P13_ModeWr Lib "P13W32.DLL" Alias "_P13_ModeWr@8" (ByVal mode As Integer, ByVal handleval As Long) As Long
Public Declare Function P13_MonClear Lib "P13W32.DLL" Alias "_P13_MonClear@4" (ByVal handleval As Long) As Long
Public Declare Function P13_MonConfigEx Lib "P13W32.DLL" Alias "_P13_MonConfigEx@16" (ByVal configval As Long, ByVal moncount As Long, ByVal cardnum As Integer, ByVal handleval As Long) As Long
Public Declare Function P13_MonConfigExx Lib "P13W32.DLL" Alias "_P13_MonConfigExx@20" (ByVal configval As Long, ByVal seqaddr As Long, ByVal moncount As Long, ByVal cardnum As Integer, ByVal handleval As Long) As Long
Public Declare Function P13_MonFilterSAEx Lib "P13W32.DLL" Alias "_P13_MonFilterSAEx@24" (ByVal taval As Long, ByVal rcvsamask As Long, ByVal xmtsamask As Long, ByVal rcvmcmask As Long, ByVal xmtmcmask As Long, ByVal handleval As Long) As Long
Public Declare Function P13_MonRdEx Lib "P13W32.DLL" Alias "_P13_MonRdEx@12" (ByRef buf As Integer, ByVal bufcount As Integer, ByVal handleval As Long) As Integer
Public Declare Function P13_MonResume Lib "P13W32.DLL" Alias "_P13_MonResume@4" (ByVal handleval As Long) As Long
Public Declare Function P13_MonStart Lib "P13W32.DLL" Alias "_P13_MonStart@4" (ByVal handleval As Long) As Long
Public Declare Function P13_MonStatus Lib "P13W32.DLL" Alias "_P13_MonStatus@4" (ByVal handleval As Long) As Long
Public Declare Function P13_MonStop Lib "P13W32.DLL" Alias "_P13_MonStop@4" (ByVal handleval As Long) As Long
Public Declare Function P13_MsgBlockRd Lib "P13W32.DLL" Alias "_P13_MsgBlockRd@12" (ByRef buf As Integer, ByVal msgaddr As Long, ByVal handleval As Long) As Long
Public Declare Function P13_MsgBlockWr Lib "P13W32.DLL" Alias "_P13_MsgBlockWr@12" (ByRef buf As Integer, ByVal msgaddr As Long, ByVal handleval As Long) As Long
Public Declare Function P13_MsgCheck Lib "P13W32.DLL" Alias "_P13_MsgCheck@8" (ByVal msgaddr As Long, ByVal handleval As Long) As Integer
Public Declare Function P13_MsgCommRd Lib "P13W32.DLL" Alias "_P13_MsgCommRd@12" (ByRef buf As Integer, ByVal msgaddr As Long, ByVal handleval As Long) As Long
Public Declare Function P13_MsgCommWr Lib "P13W32.DLL" Alias "_P13_MsgCommWr@12" (ByRef buf As Integer, ByVal msgaddr As Long, ByVal handleval As Long) As Long
Public Declare Function P13_MsgConfig Lib "P13W32.DLL" Alias "_P13_MsgConfig@8" (ByVal configval As Long, ByVal handleval As Long) As Long
Public Declare Function P13_MsgConfigEx Lib "P13W32.DLL" Alias "_P13_MsgConfigEx@12" (ByVal configval As Long, ByVal cwd As Integer, ByVal handleval As Long) As Long
Public Declare Function P13_MsgCWD1Rd Lib "P13W32.DLL" Alias "_P13_MsgCWD1Rd@8" (ByVal msgaddr As Long, ByVal handleval As Long) As Integer
Public Declare Function P13_MsgCWD1Wr Lib "P13W32.DLL" Alias "_P13_MsgCWD1Wr@12" (ByVal cwd1 As Integer, ByVal msgaddr As Long, ByVal handleval As Long) As Long
Public Declare Function P13_MsgCWD2Rd Lib "P13W32.DLL" Alias "_P13_MsgCWD2Rd@8" (ByVal msgaddr As Long, ByVal handleval As Long) As Integer
Public Declare Function P13_MsgCWD2Wr Lib "P13W32.DLL" Alias "_P13_MsgCWD2Wr@12" (ByVal cwd2 As Integer, ByVal msgaddr As Long, ByVal handleval As Long) As Long
Public Declare Function P13_MsgErrorRd Lib "P13W32.DLL" Alias "_P13_MsgErrorRd@8" (ByVal msgaddr As Long, ByVal handleval As Long) As Integer
Public Declare Function P13_MsgErrorWr Lib "P13W32.DLL" Alias "_P13_MsgErrorWr@12" (ByVal value As Integer, ByVal msgaddr As Long, ByVal handleval As Long) As Long
Public Declare Function P13_MsgFlagRd Lib "P13W32.DLL" Alias "_P13_MsgFlagRd@8" (ByVal msgaddr As Long, ByVal handleval As Long) As Integer
Public Declare Function P13_MsgFlagWr Lib "P13W32.DLL" Alias "_P13_MsgFlagWr@12" (ByVal msgflag As Integer, ByVal msgaddr As Long, ByVal handleval As Long) As Long
Public Declare Function P13_MsgIsAccessed Lib "P13W32.DLL" Alias "_P13_MsgIsAccessed@8" (ByVal msgaddr As Long, ByVal handleval As Long) As Long
Public Declare Function P13_MsgOptRd Lib "P13W32.DLL" Alias "_P13_MsgOptRd@8" (ByVal msgaddr As Long, ByVal handleval As Long) As Integer
Public Declare Function P13_MsgOptWr Lib "P13W32.DLL" Alias "_P13_MsgOptWr@12" (ByVal msgopt As Integer, ByVal msgaddr As Long, ByVal handleval As Long) As Long
Public Declare Function P13_MsgReset Lib "P13W32.DLL" Alias "_P13_MsgReset@8" (ByVal msgaddr As Long, ByVal handleval As Long) As Long
Public Declare Function P13_MsgSWD1Rd Lib "P13W32.DLL" Alias "_P13_MsgSWD1Rd@8" (ByVal msgaddr As Long, ByVal handleval As Long) As Integer
Public Declare Function P13_MsgSWD2Rd Lib "P13W32.DLL" Alias "_P13_MsgSWD2Rd@8" (ByVal msgaddr As Long, ByVal handleval As Long) As Integer
Public Declare Function P13_Mul Lib "P13W32.DLL" Alias "_P13_Mul@8" (ByVal mula As Long, ByVal mulb As Long) As Long
Public Declare Function P13_PortRd Lib "P13W32.DLL" Alias "_P13_PortRd@8" (ByVal addrval As Integer, ByVal handleval As Long) As Integer
Public Declare Function P13_PortWr Lib "P13W32.DLL" Alias "_P13_PortWr@12" (ByVal value As Integer, ByVal addrval As Integer, ByVal handleval As Long) As Long
Public Declare Function P13_ProgRdW Lib "P13W32.DLL" Alias "_P13_ProgRdW@8" (ByVal addrval As Integer, ByVal handleval As Long) As Integer
